--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .background {
     width: 100%;
     display: flex;
@@ -13,8 +15,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Garamond";
-    font-size: 3vmin;
+    font-family: "Space Mono", monospace;
+    font-size: 2.5vmin;
     padding: 3% 0;
 }
 
