--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .footer {
     position: relative;
     display: flex;
@@ -5,8 +7,8 @@
     height: 20vh;
     background-color: #FFF0F0;
     align-items: center;
-    font-family: "Garamond";
-    font-size: 3vmin;
+    font-family: "Space Mono", monospace;
+    font-size: 2.5vmin;
 }
 
 .footer .contact {
