--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .header {
     display: flex;
     position: relative;
@@ -5,7 +7,7 @@
     height: 15vh;
     background-color: #FFF0F0;
     align-items: center;
-    font-family: "Garamond";
+    font-family: "Space Mono", monospace;
     box-shadow: 0 0 15px 5px #FFBDBD;
     z-index: 1;
 }
