--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .background {
     width: 100%;
@@ -15,7 +16,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    font-family: "Garamond";
+    font-family: "Space Mono", monospace;
 }
 
 .background .home .selfie {
@@ -29,14 +30,14 @@
 .background .home .intro {
     max-height: 80%;
     margin: auto 0;
-    font-size: 3vmin;
+    font-size: 2.5vmin;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .background .home .intro h1 {
-    font-size: 5vmin;
+    font-size: 4.5vmin;
     margin: 0;
 }
 
