--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .fallingPetals {
     width: 100vw;
     height: 100vh;
@@ -159,8 +161,8 @@
 .fallingPetals #welcome {
     opacity: 0;
     display: block;
-    font-size: 2.5vw;
-    font-family: "Garamond";
+    font-size: 2vw;
+    font-family: "Space Mono", monospace;
     letter-spacing: 0.4vw;
     background-color: white;
     border-radius: 5px;
