--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -20,9 +20,16 @@
     padding: 3% 0;
 }
 
+.background .about .programmer {
+    max-width: 30vmin;
+    max-height: 50vmin;
+    object-fit: contain;
+    display: block;
+}
+
 .background .about h1 {
     font-size: 5vmin;
-    margin: 2% 0;
+    margin: 1% 0;
 }
 
 .background .about .progress {
