--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,7 +15,7 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    margin: 0 2%;
+    margin: 1% 2%;
     display: flex;
     flex-direction: column;
     justify-content: center;
