--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -14,7 +14,7 @@
 
 .logo {
     margin-left: 1%;
-    height: 100%;
+    height: 95%;
     object-fit: contain;
 }
 
@@ -37,13 +37,17 @@
     text-decoration: none;
     font-size: 3vmin;
     height: 100%;
-    width: 22%;
+    width: 21%;
     justify-content: center;
     align-items: center;
 }
 
 .navBar #experience {
-    width: 34%;
+    width: 36%;
+}
+
+.navBar #resume {
+    width: 22%;
 }
 
 .navBar #icon {
@@ -74,7 +78,7 @@
     text-shadow: 0px 0px 10px #FF2F2F;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     .navBar #home, #about, #experience, #resume {
         display: none;
     }
