--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -51,7 +51,7 @@
 
 .background .experience h2 {
     font-size: 3.5vmin;
-    margin: 1% 0;
+    margin: 0 0 1%;
 }
 
 .background .experience .dates {
