--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -48,7 +48,7 @@
     border: 2px solid #FFBDBD;
 }
 
-.background .about .progress .year1, .year2, .year3 {
+.background .about .progress .year1, .year2, .year3, .year4 {
     background-color: #FFBDBD;
     box-shadow: 0 0 0 0.1vw white inset;
 }
